# shm_ipc_lock

./: .gitignore  LICENCE  README.md  ipc_lock.py  pyproject.toml
src/shm_ipc_lock/: __init__.py  demo.py  ipc_lock.py
src/shm_ipc_lock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
